# cf-worker-r2-download-bug-reproducer

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
local-r2-sync/: package-lock.json  package.json  sync.sh  wrangler.toml
local-r2-sync/src/: worker.ts
src/: lib.rs
